Create MCP skeleton with mock data, project context for Claude

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "segmint": "./build/index.js"
   },
   "scripts": {
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc",
+    "start": "node build/index.js"
   },
   "files": [
     "build"
